Agentforce/force-app/main/default/objects/Account/fields/NPS_Assignment_Sent__c.field-meta.xml
<CustomField>
    <fullName>NPS_Assignment_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirms assignment of Account notification has been sent to the NPS Surveyor</description>
    <label>NPS Assignment Sent</label>
    <type>Checkbox</type>
</CustomField>