Agentforce/force-app/main/default/objects/Account/fields/NPS_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>NPS_Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPS Client Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Contact is not associated to the Account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (NPS Surveys)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>