Agentforce/force-app/main/default/objects/Account/fields/NPS_Client_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>NPS_Client_Contact_Name__c</fullName>
    <description>NPS Client Contact Full Name</description>
    <formula>NPS_Client_Contact__r.FirstName + &quot; &quot; +  NPS_Client_Contact__r.LastName</formula>
    <label>NPS Client Contact Name</label>
    <type>Text</type>
</CustomField>