Agentforce/force-app/main/default/objects/Account/fields/NPS_Surveyor_Active__c.field-meta.xml
<CustomField>
    <fullName>NPS_Surveyor_Active__c</fullName>
    <description>Used to identify if the NPS Surveyor assigned is Active</description>
    <formula>NPS_Surveyor__r.IsActive</formula>
    <label>NPS Surveyor Active</label>
    <type>Checkbox</type>
</CustomField>