Agentforce/force-app/main/default/objects/Account/fields/NPS_Surveyor_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>NPS_Surveyor_Business_Unit__c</fullName>
    <description>Displays the Business Unit of the NPS Surveyor</description>
    <formula>TEXT(NPS_Surveyor__r.Business_Unit__c)</formula>
    <label>NPS Surveyor Business Unit</label>
    <type>Text</type>
</CustomField>