Agentforce/force-app/main/default/objects/Account/fields/Number_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sites__c</fullName>
    <description>AD-29 Record the correct number of sites</description>
    <label>Number of Sites</label>
    <summaryForeignKey>Site__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>