Agentforce/force-app/main/default/objects/Account/fields/OCS_Account__c.field-meta.xml
<CustomField>
    <fullName>OCS_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-284 - Marks an Account to be the internal OCS Account. This will be the default account used as the winning competitor for Closed Won Opportunities</description>
    <label>OCS Account</label>
    <type>Checkbox</type>
</CustomField>