Agentforce/force-app/main/default/objects/Account/fields/OCS_Sector__c.field-meta.xml
<CustomField>
    <fullName>OCS_Sector__c</fullName>
    <description>AD-170 - picklist values to identify the Account Sector</description>
    <label>OCS Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector</valueSetName>
    </valueSet>
</CustomField>