Agentforce/force-app/main/default/objects/Account/fields/OCS_Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>OCS_Sub_Sector__c</fullName>
    <description>AD-170 - picklist values to identify the Sub-Sector of the Account</description>
    <label>OCS Sub-Sector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OCS_Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Sector</valueSetName>
    </valueSet>
</CustomField>