Agentforce/force-app/main/default/objects/Account/fields/Operating_Status__c.field-meta.xml
<CustomField>
    <fullName>Operating_Status__c</fullName>
    <description>Identifies the Operating Status through DnB</description>
    <label>Operating Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active - TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>