Agentforce/force-app/main/default/objects/Account/fields/Operating_Status_Start_Date_Temp__c.field-meta.xml
<CustomField>
    <fullName>Operating_Status_Start_Date_Temp__c</fullName>
    <label>Operating Status Start Date Temp</label>
    <length>10</length>
    <type>Text</type>
</CustomField>