Agentforce/force-app/main/default/objects/Account/fields/Operational_Director__c.field-meta.xml
<CustomField>
    <fullName>Operational_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operational Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Operational Director)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>