Agentforce/force-app/main/default/objects/Account/fields/Operational_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Operational_Responsibility__c</fullName>
    <label>Operational Responsibility</label>
    <type>Email</type>
</CustomField>