Agentforce/force-app/main/default/objects/Account/fields/Operational_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Operational_Risk_Level__c</fullName>
    <description>AD-833 to identify the operational risk level against each Contract and identify the highest risk on the account</description>
    <label>Operational Risk Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>