Agentforce/force-app/main/default/objects/Account/fields/Operations_Director_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Operations_Director_Inactive__c</fullName>
    <description>Identifies where Operations Director is Inactive</description>
    <formula>Operational_Director__r.Inactive__c</formula>
    <label>Operations Director Inactive</label>
    <type>Checkbox</type>
</CustomField>