Agentforce/force-app/main/default/objects/Account/fields/Opportunity_Orderbook__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Orderbook__c</fullName>
    <label>Opportunity Orderbook</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>