Agentforce/force-app/main/default/objects/Account/fields/Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Owner_Business_Unit__c</fullName>
    <label>Owner Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>