Agentforce/force-app/main/default/objects/Account/fields/Owner_Business_Unit_Text__c.field-meta.xml
<CustomField>
    <fullName>Owner_Business_Unit_Text__c</fullName>
    <formula>TEXT( Owner.Business_Unit__c )</formula>
    <label>Owner Business Unit (Formula)</label>
    <type>Text</type>
</CustomField>