Agentforce/force-app/main/default/objects/Account/fields/Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Owner_Country__c</fullName>
    <label>Owner Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>