Agentforce/force-app/main/default/objects/Account/fields/Owner_Country_f__c.field-meta.xml
<CustomField>
    <fullName>Owner_Country_f__c</fullName>
    <formula>Owner.Country</formula>
    <label>Owner Country (Formula)</label>
    <type>Text</type>
</CustomField>