Agentforce/force-app/main/default/objects/Account/fields/Owner_Region_Text__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region_Text__c</fullName>
    <formula>TEXT( Owner.Region__c)</formula>
    <label>Owner Region (Formula)</label>
    <type>Text</type>
</CustomField>