Agentforce/force-app/main/default/objects/Account/fields/Owner_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Owner_Subteam__c</fullName>
    <formula>TEXT(Owner.Subteam__c)</formula>
    <label>Owner Subteam</label>
    <type>Text</type>
</CustomField>