Agentforce/force-app/main/default/objects/Account/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team__c</fullName>
    <description>Account Owner Team</description>
    <formula>TEXT(Owner.Team__c)</formula>
    <label>Owner Team</label>
    <type>Text</type>
</CustomField>