Agentforce/force-app/main/default/objects/Account/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government Entity</fullName>
            </value>
            <value>
                <fullName>Not For Profit</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Privately owned</fullName>
            </value>
            <value>
                <fullName>Publicly Traded Company</fullName>
            </value>
            <value>
                <fullName>Publicly owned</fullName>
            </value>
            <value>
                <fullName>Sole Trader</fullName>
            </value>
            <value>
                <fullName>State owned Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>