Agentforce/force-app/main/default/objects/Account/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Company is a Partner to OCS</description>
    <label>Partner</label>
    <type>Checkbox</type>
</CustomField>