Agentforce/force-app/main/default/objects/Account/fields/Payer_Address__c.field-meta.xml
<CustomField>
    <fullName>Payer_Address__c</fullName>
    <label>Payer</label>
    <type>Address</type>
</CustomField>