Agentforce/force-app/main/default/objects/Account/fields/Payer_External_Ref__c.field-meta.xml
<CustomField>
    <fullName>Payer_External_Ref__c</fullName>
    <label>Payer External Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>