Agentforce/force-app/main/default/objects/Account/fields/Payer_External_Ref_Merged__c.field-meta.xml
<CustomField>
    <fullName>Payer_External_Ref_Merged__c</fullName>
    <label>Payer External Ref Merged</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>