Agentforce/force-app/main/default/objects/Account/fields/People_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>People_Risk_Level__c</fullName>
    <description>AD-836 to identify the People risk level against each Contract and identify the highest risk on the account</description>
    <label>People Risk Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>