Agentforce/force-app/main/default/objects/Account/fields/Plan_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Plan_Last_Updated__c</fullName>
    <label>Plan Last Updated</label>
    <type>DateTime</type>
</CustomField>