Agentforce/force-app/main/default/objects/Account/fields/Premises_Surface_Area__c.field-meta.xml
<CustomField>
    <fullName>Premises_Surface_Area__c</fullName>
    <label>D&amp;B: Premises Surface Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>