Agentforce/force-app/main/default/objects/Account/fields/Premises_Surface_Area_Unit__c.field-meta.xml
<CustomField>
    <fullName>Premises_Surface_Area_Unit__c</fullName>
    <label>D&amp;B: Premises Surface Area Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acre</fullName>
            </value>
            <value>
                <fullName>Are</fullName>
            </value>
            <value>
                <fullName>ha</fullName>
            </value>
            <value>
                <fullName>Hectare</fullName>
            </value>
            <value>
                <fullName>Square Centimetre</fullName>
            </value>
            <value>
                <fullName>Square Decimetre</fullName>
            </value>
            <value>
                <fullName>Square Feet</fullName>
            </value>
            <value>
                <fullName>Square Foot</fullName>
            </value>
            <value>
                <fullName>Square Kilometre</fullName>
            </value>
            <value>
                <fullName>Square Metre</fullName>
            </value>
            <value>
                <fullName>Square Mile</fullName>
            </value>
            <value>
                <fullName>Square Millimetre</fullName>
            </value>
            <value>
                <fullName>Square Yard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>