Agentforce/force-app/main/default/objects/Account/fields/Relationship_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Risk_Level__c</fullName>
    <description>AD-845 to know when we are have a relationship risk against a contract and identify the highest risk on the account</description>
    <label>Relationship Risk Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>