Agentforce/force-app/main/default/objects/Account/fields/Retention_Plan__c.field-meta.xml
<CustomField>
    <fullName>Retention_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to capture the Retention Action Plan against an Account</description>
    <label>Retention Plan</label>
    <referenceTo>Action_Plan__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>