Agentforce/force-app/main/default/objects/Account/fields/Secondary_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Source__c</fullName>
    <description>Picklist field to capture the Secondary Source from the Account</description>
    <label>Secondary Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Secondary_Source</valueSetName>
    </valueSet>
</CustomField>