Agentforce/force-app/main/default/objects/Account/fields/Sector_Type__c.field-meta.xml
<CustomField>
    <fullName>Sector_Type__c</fullName>
    <formula>IF(ISBLANK(TEXT(OCS_Sector__c)),NULL,
			CASE(OCS_Sector__c,
					&quot;Education&quot;,&quot;Public&quot;,
					&quot;Government &amp; Public Sector&quot;,&quot;Public&quot;,
					&quot;Healthcare&quot;,&quot;Public&quot;,
					&quot;Private&quot;
					)
			)
			
			/* If OCS Sector is Blank return NULL, otherwise evaluate Sector Type based on OCS Sector value */</formula>
    <inlineHelpText>Returns Public or Private based on OCS Sector value. Public = Government, Healthcare or Education and all other Sectors are Private.</inlineHelpText>
    <label>Sector Type</label>
    <type>Text</type>
</CustomField>