Agentforce/force-app/main/default/objects/Account/fields/Service_Summary__c.field-meta.xml
<CustomField>
    <fullName>Service_Summary__c</fullName>
    <description>AD-171 - Add summary of all Services that are being delivered under all Contracts against this Account.</description>
    <label>Service Summary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Family</valueSetName>
    </valueSet>
</CustomField>