Agentforce/force-app/main/default/objects/Account/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SIC Code</label>
    <referenceTo>SIC_Code__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>