Agentforce/force-app/main/default/objects/Account/fields/SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description__c</fullName>
    <formula>SIC_Code__r.Description__c</formula>
    <label>D&amp;B: SIC Description</label>
    <type>Text</type>
</CustomField>