Agentforce/force-app/main/default/objects/Account/fields/SIC_Sector__c.field-meta.xml
<CustomField>
    <fullName>SIC_Sector__c</fullName>
    <formula>TEXT(SIC_Code__r.Sector__c)</formula>
    <label>D&amp;B: SIC Sector</label>
    <type>Text</type>
</CustomField>