Agentforce/force-app/main/default/objects/Account/fields/Stock_Exchange_Name__c.field-meta.xml
<CustomField>
    <fullName>Stock_Exchange_Name__c</fullName>
    <label>Stock Exchange Name</label>
    <type>TextArea</type>
</CustomField>