Agentforce/force-app/main/default/objects/Account/fields/Strategic_Description__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Description__c</fullName>
    <description>Description on Strategic Accounts to provide further details</description>
    <label>Strategic Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>