Agentforce/force-app/main/default/objects/Account/fields/Strategic_Target__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Target__c</fullName>
    <description>Identifies the Business Unit for Strategic Account</description>
    <label>Strategic Target</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Hard Services</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Private FM</fullName>
            </value>
            <value>
                <fullName>Public FM</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>