Agentforce/force-app/main/default/objects/Account/fields/Sum_of_Active_ACV__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Active_ACV__c</fullName>
    <label>Sum of Active Annual Contract Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>