Agentforce/force-app/main/default/objects/Account/fields/Sum_of_Closed_Last_12_Months_Operation__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Closed_Last_12_Months_Operation__c</fullName>
    <label>Sum of Closed Last 12 Months Operation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>