Agentforce/force-app/main/default/objects/Account/fields/Sum_of_Closed_Withdrawn_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Closed_Withdrawn_Opportunities__c</fullName>
    <label>Sum of Closed Withdrawn Opportunities</label>
    <summarizedField>Opportunity.Amount_Hidden__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>5. Closed Withdrawn</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>