Agentforce/force-app/main/default/objects/Account/fields/Sum_of_Closed_Won_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Closed_Won_Last_12_Months__c</fullName>
    <label>Sum of Closed Won Last 12 Months</label>
    <summarizedField>Opportunity.Amount_Hidden__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>7. Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Closed_Last_12_Months__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>