Agentforce/force-app/main/default/objects/Account/fields/Sum_of_Closed_Won_Lost_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Closed_Won_Lost_Last_12_Months__c</fullName>
    <description>Sum of won and lost opps in the last 12 months</description>
    <formula>Sum_of_Closed_Won_Last_12_Months__c +  Sum_of_Closed_Lost_Last_12_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Closed Won &amp; Lost Last 12 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>