Agentforce/force-app/main/default/objects/Account/fields/Sum_of_Future_Active_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Future_Active_Opportunities__c</fullName>
    <description>Sum of Future and Active Opportunities</description>
    <formula>Sum_of_Future_Opportunities__c +  Sum_of_Open_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Open Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>