Agentforce/force-app/main/default/objects/Account/fields/Sum_of_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Open_Opportunities__c</fullName>
    <label>Sum of Active Opportunities</label>
    <summarizedField>Opportunity.Amount_Hidden__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Sub_Stage__c</field>
        <operation>notEqual</operation>
        <value>2.1 Future Opportunity</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>