Agentforce/force-app/main/default/objects/Account/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies the Account is a Supplier to OCS</description>
    <label>Supplier</label>
    <type>Checkbox</type>
</CustomField>