Agentforce/force-app/main/default/objects/Account/fields/Surface_Area__c.field-meta.xml
<CustomField>
    <fullName>Surface_Area__c</fullName>
    <label>Surface Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1000 m2</fullName>
            </value>
            <value>
                <fullName>&gt;50000</fullName>
            </value>
            <value>
                <fullName>1000-4999</fullName>
            </value>
            <value>
                <fullName>20000-49999</fullName>
            </value>
            <value>
                <fullName>5000-19999</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>