Agentforce/force-app/main/default/objects/Account/fields/SWOT__c.field-meta.xml
<CustomField>
    <fullName>SWOT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>E2E-168 SWOT - change relationship to Account using lookup - 1 - 1</description>
    <label>SWOT</label>
    <referenceTo>SWOT__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>