Agentforce/force-app/main/default/objects/Account/fields/SWOT_Exists__c.field-meta.xml
<CustomField>
    <fullName>SWOT_Exists__c</fullName>
    <description>True if SWOT exists</description>
    <formula>NOT(ISBLANK(SWOT__c))</formula>
    <label>SWOT Exists</label>
    <type>Checkbox</type>
</CustomField>