Agentforce/force-app/main/default/objects/Account/fields/System_Conga_Composer_Currency_Culture__c.field-meta.xml
<CustomField>
    <fullName>System_Conga_Composer_Currency_Culture__c</fullName>
    <description>System Formula field to drive Currency/Locale/Date Format in Conga Generated Documents.

https://documentation.conga.com/composer/latest/salesforce/dynamic-currency-formats-in-word-165940029.html</description>
    <formula>CASE(CurrencyIsoCode,
					&quot;GBP&quot;,&quot;en-GB&quot;,
					&quot;EUR&quot;,&quot;fr-FR&quot;,
					&quot;THB&quot;,&quot;th-TH&quot;,
					&quot;SAR&quot;,&quot;ar-SA&quot;,
					&quot;AUD&quot;,&quot;en-AU&quot;,
					&quot;NZD&quot;,&quot;en-NZ&quot;,
					&quot;INR&quot;,&quot;en-IN&quot;,
					&quot;IDR&quot;,&quot;id-ID&quot;,
					&quot;USD&quot;,&quot;en-US&quot;,
					&quot;SGD&quot;,&quot;en-SG&quot;,
					&quot;QAR&quot;,&quot;ar-QA&quot;,
					&quot;AED&quot;,&quot;ar-AE&quot;,
					&quot;MYR&quot;,&quot;ms-MY&quot;,
					&quot;PHP&quot;,&quot;en-PH&quot;,
					&quot;BDT&quot;,&quot;bn-BD&quot;,
					&quot;HUF&quot;,&quot;hu-HU&quot;,
					&quot;PLN&quot;,&quot;pl-PL&quot;,
					&quot;CZK&quot;,&quot;cs-CZ&quot;,
					&quot;RON&quot;,&quot;ro-RO&quot;,
					&quot;en-GB&quot;
					)</formula>
    <label>System: Conga Composer Currency Culture</label>
    <type>Text</type>
</CustomField>