Agentforce/force-app/main/default/objects/Account/fields/System_Country_Risk_Alert__c.field-meta.xml
<CustomField>
    <fullName>System_Country_Risk_Alert__c</fullName>
    <description>List of Related Countries</description>
    <formula>IF (
   CONTAINS(BillingCountry,&apos;Russia&apos;)
|| CONTAINS(DNBConnect__D_B_Connect_Company_Profile__r.HQ_primAddr_Cntry_name__c , &apos;Russia&apos;)
|| CONTAINS(DNBConnect__D_B_Connect_Company_Profile__r.mailingAddr_Cntry_name__c , &apos;Russia&apos;) 
|| CONTAINS(DNBConnect__D_B_Connect_Company_Profile__r.parent_primAddr_Cntry_name__c , &apos;Russia&apos;)
|| CONTAINS(DNBConnect__D_B_Connect_Company_Profile__r.primAddr_Cntry_name__c , &apos;Russia&apos;) 
|| CONTAINS(DNBConnect__D_B_Connect_Company_Profile__r.DU_primAddr_Cntry_name__c , &apos;Russia&apos;)
|| CONTAINS(DNBConnect__D_B_Connect_Company_Profile__r.primAddr_Cntry_name__c , &apos;Russia&apos;)
,true,false)</formula>
    <label>System: Country Risk Alert</label>
    <type>Checkbox</type>
</CustomField>