Agentforce/force-app/main/default/objects/Account/fields/System_Durham_Lane_Ireland__c.field-meta.xml
<CustomField>
    <fullName>System_Durham_Lane_Ireland__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Durham Lane list views</description>
    <label>System: Durham Lane: Ireland</label>
    <type>Checkbox</type>
</CustomField>